styles.css
:root {
    --bg: white;
    --fg: #244E68;
    --hl: #FDA363;
}

* {
    font-family: 'Montserrat', sans-serif;
    color: var(--fg);
}

html {
    scroll-behavior: smooth;
}

body {
    background-image: url('images/bg.svg');
    background-size: cover;
}

.content {
    width: 40vw;
    margin-left: 30vw;
}

h1 {
    font-size: 3vw;
    margin: 0;
}

p {
    margin: 0;
    font-size: 1.2vw;
    text-align: justify;
}

.navbar {
    float: left;
    list-style: none;
    padding-left: 1vw;
}

.navbar li {
    display: block;
    margin-top: .5vh;
}

.link {
    display: inline-block;
    margin: 0;
    margin-top: .5vh;
    padding: 0;
    font-size: 1.2vw;
    text-decoration: none;
    color: var(--hl);
}

.link::before {
    content: '';
    display: block;
    width: 0%;
    height: .3vh;
    background: var(--hl);
    background-size: 200%;
    transition: all .6s;
    margin-left: 100%;
}

.link::after {
    content: '';
    display: block;
    width: 0%;
    height: .3vh;
    background: var(--hl);
    background-size: 200%;
    transition: all .6s;
}

.link:hover::after,
.link.active::after {
    width: 100%;
}

.link:hover::before,
.link.active::before {
    width: 100%;
    margin-left: 0;
}

.vidcont {
    position: relative;
    overflow: hidden;
    padding-top: 56.25%;
    box-shadow: .15vw .15vw 0 var(--bg), .6vw .6vw 0 var(--hl);
}

.vidcont iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
}

ul.products {
    list-style: none;
    padding: 0;
    width: 100%;
    height: 100%;
}

ul.products li {
    width: 19.5vw;
    margin-bottom: 3vh;
    display: inline-block;
}

ul.products h2 {
    font-size: 1.6vw;
    margin: 0;
}

ul.products h3 {
    font-size: 1.2vw;
    font-weight: 500;
    margin: 0;
}

@media only screen and (orientation: portrait) {

    .navbar {
        /*padding-left: 5vw;
        padding-top: 2vw;*/
        display: none;
    }

    .content {
        width: 80vw;
        margin-left: 9vw;
    }

    h1 {
        font-size: 7vw;
    }

    p {
        font-size: 2vw;
    }

    .link {
        font-size: 5vw;
    }

    #home {
        padding-top: 32vh !important;
    }

    #portfolio {
        padding-top: 30vh !important;
    }

    #shop {
        padding-top: 20vh !important;
    }

    ul.products li {
        width: 100%;
    }

    ul.products h2 {
        font-size: 5vw;
        margin: 0;
    }

    ul.products h3 {
        font-size: 4vw;
        font-weight: 500;
        margin: 0;
    }

    .vidcont {
        box-shadow: .4vh .4vh 0 var(--bg), 1vh 1vh 0 var(--hl);
    }

}

